--- a/src/markdown/mas/data_verkenning_2018_2023.Rmd
+++ b/src/markdown/mas/data_verkenning_2018_2023.Rmd
@@ -1366,62 +1366,104 @@ Deze maximum aantallen zijn een benadering voor het aantal territoria.
 De gemiddelden werden hiervan berekend en een 95% betrouwbaarheidsinterval op basis van bootstrap samples.
 **Hier is ook geen rekening gehouden met detectiekansen.**
 
+```{r}
+roofvogels_f <- function() {
+  roofvogels <- c("Blauwe Kiekendief", "Boomvalk", "Bruine Kiekendief",
+                  "Buizerd",
+                  "Grauwe Kiekendief", "Ransuil", "Slechtvalk", "Sperwer",
+                  "Steenuil", "Steppekiekendief", "Torenvalk", "Velduil",
+                  "Wespendief", "Zwarte Wouw")
 
-```{r diversiteit-doelsoorten-dichtheden-strat-maxaantal}
-mean_maxabu_doelvogels_strat <- mas_vogels %>% 
-  filter((wrntype > 0L & 
-         naam %in% doelsoorten) |
-           naam == "Torenvalk") %>%
-  st_drop_geometry() %>%
-  group_by(regio, plotnaam, jaar, stratum, periode_in_jaar, naam) %>%
-  summarise(totaal_aantal = sum(aantal),
-            .groups = "drop") %>%
-  pivot_wider(names_from = naam,
-              values_from = totaal_aantal,
-              values_fill = list(totaal_aantal = 0)) %>%
-  mutate(jaar = factor(jaar)) %>%
-  group_by(jaar, plotnaam, stratum, regio) %>%
-  summarise(across(.cols = where(~ is.numeric(.x) && min(.x) == 0),
-                   .fns = ~max(.x)),
-            .groups = "drop") %>%
-  pivot_longer(cols = where(~ is.numeric(.x) && min(.x) == 0),
-               names_to = "naam",
-               values_to = "max_aantal") %>%
-  group_by(jaar, stratum, regio, naam) %>%
-  summarise(n = n(),
-            mean_cl_boot(max_aantal),
-            .groups = "drop") %>%
-  mutate(y = y * (100 * 1e4) / (pi * 300^2),
-         ymin = ymin * (100 * 1e4) / (pi * 300^2),
-         ymax = ymin * (100 * 1e4) / (pi * 300^2))
-```
-
-```{r plot-maxaantal-dichtheden}
-plotdichtheden <- function(data, regio, naam) {
-  if (naam != "Torenvalk") {
-    ggplot(data = data) +
-      geom_pointrange(aes(x = factor(jaar), y = y, ymin = ymin, ymax = ymax,
-                          colour = stratum),
-                      position = position_dodge(width = 0.5)) +
-      labs(x = "Jaar", y = "Aantal broedparen per 100 ha") +
-      ggtitle(paste(regio, naam))
-  } else {
-    ggplot(data = data) +
-      geom_pointrange(aes(x = factor(jaar), y = y, ymin = ymin, ymax = ymax,
-                          colour = stratum),
-                      position = position_dodge(width = 0.5)) +
-      labs(x = "Jaar",
-           y = "Aantal waarnemingen per 100 ha (incl. broedcode 0)") +
-      ggtitle(paste(regio, naam))
-  }
+  return(roofvogels)
 }
+
+plot_densiteit_max <- function(data, design, soort, show_data = TRUE,
+                               seed = 123) {
+  roofvogels <- roofvogels_f()
   
-mean_maxabu_doelvogels_strat %>%
-  group_by(regio, naam) %>%
-  nest() %>%
-  mutate(plot = pmap(list(data = data, regio = regio, naam = naam),
-                     plotdichtheden)) %>%
-  select(plot) %>%
-  pull(plot)
+  # Oppervlakte telcirkels
+  cirkelopp <- pi * 300^2
+
+  set.seed(seed)
+  average_df <- data %>%
+    filter(naam == soort) %>%
+    group_by(plotnaam, periode_in_jaar, regio, jaar) %>%
+    summarise(totaal_aantal = sum(aantal),
+              .groups = "drop") %>%
+    full_join(design,
+              by = join_by(plotnaam, periode_in_jaar, regio, jaar)) %>%
+    replace(is.na(.), 0) %>%
+    mutate(jaar = as.character(jaar)) %>%
+    # Bepaal voor elke plot het maximum aantal individuen over
+    # de telperiodes per jaar
+    group_by(plotnaam, regio, jaar) %>%
+    mutate(max_aantal = max(totaal_aantal)) %>%
+    ungroup() %>%
+    select(-c(periode_in_jaar, totaal_aantal)) %>%
+    distinct() %>%
+    group_by(regio, jaar, stratum) %>%
+    mutate(bootstrap_max = mean_cl_boot(max_aantal)) %>%
+    ungroup() %>%
+
+    # Deel cirkeloppervlakte om densiteit broedkoppels per plot te krijgen
+    mutate(max_densiteit = max_aantal / cirkelopp * 1e6,
+           total_max_mean = bootstrap_max$y / cirkelopp * 1e6,
+           lcl_max_mean = bootstrap_max$ymin / cirkelopp * 1e6,
+           ucl_max_mean = bootstrap_max$ymax / cirkelopp * 1e6) %>%
+    select(-c(bootstrap_max, max_aantal))
+
+  p <- average_df %>%
+    mutate(stratum = factor(stratum,
+                              levels = c("OL - binnen",
+                                         "OL - buiten",
+                                         "HOL - binnen",
+                                         "HOL - buiten"))) %>%
+    ggplot() +
+      stat_sum(aes(x = jaar, y = max_densiteit, colour = stratum),
+               position = position_dodge(width = 0.5), alpha = 0.1) +
+      geom_point(aes(x = jaar, y = total_max_mean,
+                     colour = stratum), size = 2.5,
+                 position = position_dodge(width = 0.5)) +
+      geom_errorbar(aes(x = jaar, ymin = lcl_max_mean,
+                        ymax = ucl_max_mean, colour = stratum),
+                    width = 0.25, position = position_dodge(width = 0.5)) +
+      facet_wrap(~regio) +
+      labs(colour = "Stratum", size = "Aantal telpunten") +
+      theme(legend.position = "top",
+            legend.background = element_rect(fill = "white",
+                                             color = "darkgrey"),
+            legend.margin = margin(6, 6, 6, 6))
+
+  if (soort == "Haas" | soort %in% paste(roofvogels, "zonder_broedcode",
+                                         sep = "_")) {
+    p <- p + labs(x = "", y = "Aantal individuen per 100 ha")
+  } else {
+    p <- p + labs(x = "", y = "Aantal broedparen per 100 ha")
+  }
+
+  if (show_data) {
+    p <- p + scale_y_continuous(limits = c(0, NA),
+                                trans = scales::pseudo_log_trans(),
+                                breaks = c(0:5, seq(10, 50, 10),
+                                           seq(75, 200, 25),
+                                           seq(300, 1000, 100)))
+  } else {
+    p <- p + scale_y_continuous(limits = c(0, NA))
+  }
+
+  return(p)
+}
 ```
 
+```{r}
+plot_densiteit_max(doel_vogels, bezoekenlijst_2018_2023, "Geelgors")
+```
+
+
+```{r doelsoorten-dichtheden-strat-maxaantal}
+for (spec in sort(doelsoorten)) {
+  p <- plot_densiteit_max(doel_vogels, bezoekenlijst_2018_2023, spec) +
+    ggtitle(spec)
+  print(p)
+}
+```
